Support static linking against LLVM
By default, PostgreSQL doesn't explicitly choose whether to link
statically or dynamically against LLVM when LLVM JIT is enabled (e.g.:
`./configure --with-llvm`).

`llvm-config` will choose to dynamically link by default.

In order to statically link, one must pass `--link-static` to
`llvm-config` when listing linker flags (`--ldflags`) and libraries
(`--libs`).

This patch enables explicitly choosing LLVM link mode by adding an
optional argument `LINKMODE` to `--with-llvm[=LINKMODE]`.

To statically link against LLVM it suffices, then, to use
`--with-llvm=static`.

--- a/configure.ac
+++ b/configure.ac
@@ -403,12 +403,16 @@ AC_SUBST(SUN_STUDIO_CC)
 # LLVM
 #
 # Checked early because subsequent tests depend on it.
-PGAC_ARG_BOOL(with, llvm, no, [build with LLVM based JIT support],
-              [AC_DEFINE([USE_LLVM], 1, [Define to 1 to build with LLVM based JIT support. (--with-llvm)])])
+PGAC_ARG_OPTARG(with, llvm,
+                [LINKMODE],
+                [build with LLVM based JIT support, optionally using link mode (static,shared)],
+                [LLVM_LINK_MODE=],
+                [LLVM_LINK_MODE=--link-$withval])
+AC_MSG_RESULT([$with_llvm])
 AC_SUBST(with_llvm)
 dnl must use AS_IF here, else AC_REQUIRES inside PGAC_LLVM_SUPPORT malfunctions
 AS_IF([test "$with_llvm" = yes], [
-  PGAC_LLVM_SUPPORT()
+  PGAC_LLVM_SUPPORT(with_llvm, LLVM_LINK_MODE)
 ]) # fi
 
 
